--- a/php/SearchSites/css/fast&furious.css
+++ b/php/SearchSites/css/fast&furious.css
@@ -7,7 +7,7 @@ body {
     margin-right: 20%;
     padding-right: 3%;
     background-size: cover!important;
-    background: url('../img/fastFurious/background.jpg');
+    background: url('../../../img/fastFurious/background.jpg');
     background-attachment: fixed;
     background-position: center;
 }
