--- a/php/SearchSites/css/marvel.css
+++ b/php/SearchSites/css/marvel.css
@@ -7,7 +7,7 @@ body {
     margin-right: 20%;
     padding-right: 3%;
     background-size: cover!important;
-    background: url('../img/marvel/background.png');
+    background: url('../../../img/marvel/background.png');
     background-attachment: fixed;
     background-position: center;
 }
