--- a/php/SearchSites/css/starwars.css
+++ b/php/SearchSites/css/starwars.css
@@ -7,7 +7,7 @@ body {
     margin-right: 20%;
     padding-right: 3%;
     background-size: cover!important;
-    background: url('../img/starWars/starwarsBackground.jpg');
+    background: url('../../../img/starWars/starwarsBackground.jpg');
     background-attachment: fixed;
     background-position: center;
 }
