--- a/styles.css
+++ b/styles.css
@@ -1,73 +1,64 @@
 :root {
     --size-bd: 100vh;
 }
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-
-
-
+/*Corpo*/
 body {
+    min-height: 700px;
+    height: 800px;
+    min-width: 1300px;
+    width: 1500px;
+    text-align: center;
+    margin: 0px 50px;
+    padding: 10px;
     overflow: hidden;
-    position: relative;
-    height: 100vh;
-    width: 100%;
-    text-align: right;
+    background-size: cover!important;
     background: linear-gradient(to right, rgb(46, 42, 42), rgb(14, 135, 172));
     background-image: url('img/home/background2.png');
-    margin-right: 20%;
-    padding-right: 2%;
+    background-attachment: fixed;
+    background-position: center;
 }
 
-
-
-
-.sideBar {
-    width: 10%;
-    height: 100%;
-    background-color: rgb(33, 136, 136);
-    margin-right: 3%;
-    padding-top: 18%;
-    padding-right: 2.5%;
-    margin-left: 5%;
-    margin-bottom: 2%;
+/*SideBar*/
+#sideBar {
+    width: 150px;
+    height: 1200px;
+    margin: 0px 75px 0px 50px;
+    padding: 400px 0px 0px 0px;
     float: left;
+    background-color: rgb(33, 136, 136);
 }
 
 .sideBarIcon {
     background-color: rgb(63, 63, 63);
     width: 100px;
-    padding: 10%;
     height: 100px;
+    margin: 10px;
+    padding: 10px;
     border-radius: 20px;
 }
 
-
-
-
-#carrossel {
+/*main*/
+#main {
     width: 100vw;
-    float: right;
-    position: absolute;
 }
 
-#imagens {
+#imagesMain {
+    margin-top: 100px;
     display: flex;
-    overflow-x: auto;
+    overflow-x: hidden;
     scroll-snap-type: x mandatory;
     -webkit-overflow-scrolling: touch;
     scroll-behavior: smooth;
-    overflow: hidden;
-    border-radius: 20px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: rgb(25, 129, 129);
 }
 
-.item {
+.itens {
     flex: none;
     scroll-snap-align: start;
     pointer-events: none;
@@ -75,104 +66,46 @@ body {
 }
 
 
-.carrosselImag {
-    width: 500px;
-    height: 550px;
+.mainImag {
+    width: 1250px;
+    height: 500px;
     object-fit: cover;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 20px;
+    border-color: rgb(25, 129, 129);
+    margin: 0px 150px 0px 50px;
 }
 
-
-
-.wrapper {
-    width: 67%;
-    height: 35%;
-    display:inline-flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-    float: inline-start;
-    margin-right: 10%;
-    position: relative;
+/*footer*/
+#footer {
+    width: 100vw;
 }
 
-.images {
-    width: 20%;
-    object-fit: cover;
-    overflow: hidden;
-    border-radius: 10px;
-    object-position: center;
-    object-fit: cover;
-    transition: transform 1s ease-in-out;
-    margin: 5px 10px;
-}
-.images > img {
-    width: 100%;
-    height: 100%;
-}
-.images > img:hover {
-    transform: scale(1.2);
-    cursor: pointer;
-}
-.gallery {
-    position: fixed;
-    top: 0;
+#images {
     display: flex;
-    width: 100%;
-    height: 100%;
-    background: rgb(0, 0, 0,0.6);
-    justify-content: space-around;
-    align-items: center;
-    color: white;
-    font-size: 35px;
-    opacity: 0;
+    overflow-x: hidden;
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch;
+    scroll-behavior: smooth;
+    z-index: index;
+}
+
+.itens {
+    flex: none;
+    scroll-snap-align: start;
     pointer-events: none;
-    transform: scale(0.8);
-    transition: transform 1s ease-in-out;
-}
-.gallery-inner {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.gallery-inner > img{
-    width: 80%;
-}
-.control-prev {
-    position: fixed;
-    left: 50px;
-   
-}
-#close {
-    color: rgb(184, 149, 149);
-    position: fixed;
-    top: 5px;
-    right: 10px;
     cursor: pointer;
 }
-.control-next {
-    position: fixed;
-    right:50px;
-}
-.active {
-    opacity: 1;
-    pointer-events: auto;
-    transform: scale(1);
-}
 
 
-
-
-.divSpace {
-    height: 50px;
-    background-color: rgba(240, 248, 255, 0);
-}
-
-.Space {
-    height: 2%;
-    background-color: rgba(240, 248, 255, 0);
-}
-
-.fundo {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(240, 248, 255, 0);
+.footerImag {
+    width: 300px;
+    height: 400px;
+    object-fit: cover;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 20px;
+    border-color: rgb(25, 129, 129);
+    margin: 0px 0px 0px 45px;
 }
