--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-:root {
-    --size-bd: 100vh;
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -10,33 +6,26 @@
 
 /*Corpo*/
 body {
-    min-height: 700px;
     height: 800px;
-    min-width: 1300px;
     width: 1500px;
     text-align: center;
-    margin: 0px 50px;
-    padding: 10px;
+    margin: 0px 0px 0px 0px;
     overflow: hidden;
-    background-size: cover!important;
-    background: linear-gradient(to right, rgb(46, 42, 42), rgb(14, 135, 172));
-    background-image: url('img/home/background2.png');
-    background-attachment: fixed;
-    background-position: center;
+    background: linear-gradient(to right, #2e2a2a, #0e87ac);
 }
 
 /*SideBar*/
 #sideBar {
     width: 150px;
     height: 1200px;
-    margin: 0px 75px 0px 50px;
+    margin: 0px 0px 0px 50px;
     padding: 400px 0px 0px 0px;
     float: left;
-    background-color: rgb(33, 136, 136);
+    background: linear-gradient(to top, #2e2a2a, #0e87ac);
 }
 
 .sideBarIcon {
-    background-color: rgb(63, 63, 63);
+    background-color: #3f3f3f;
     width: 100px;
     height: 100px;
     margin: 10px;
@@ -47,10 +36,10 @@ body {
 /*main*/
 #main {
     width: 100vw;
+    padding: 50px 0px 0px 200px;
 }
 
 #imagesMain {
-    margin-top: 100px;
     display: flex;
     overflow-x: hidden;
     scroll-snap-type: x mandatory;
@@ -73,11 +62,19 @@ body {
     border-width: 2px;
     border-style: solid;
     border-radius: 20px;
-    border-color: rgb(25, 129, 129);
+    border-color: rgb(110, 110, 110);
     margin: 0px 150px 0px 50px;
 }
 
 /*footer*/
+#backFooter {
+    width: 3000px;
+    height: 600px;
+    margin: 0px 0px 0px 0px;
+    padding: 20px 0px 0px 200px;
+    background-color: #00000075;
+}
+
 #footer {
     width: 100vw;
 }
@@ -88,7 +85,6 @@ body {
     scroll-snap-type: x mandatory;
     -webkit-overflow-scrolling: touch;
     scroll-behavior: smooth;
-    z-index: index;
 }
 
 .itens {
@@ -101,11 +97,11 @@ body {
 
 .footerImag {
     width: 300px;
-    height: 400px;
+    height: 350px;
     object-fit: cover;
     border-width: 2px;
     border-style: solid;
     border-radius: 20px;
-    border-color: rgb(25, 129, 129);
-    margin: 0px 0px 0px 45px;
+    border-color: #858888;
+    margin: 0px 0px 50px 45px;
 }
